android/JoynMeSwipeTileActivity/assets/www/src/tile/tile.css
    .tileText {
      padding: 4px;
    }


    li {
      text-decoration: none;
      text-align: left;
      color: #000;
      margin: 10px;
      width: 140px;
      height: 140px;
      background: #55be8c;
      display: block;
      float: left;
	  list-style: none;
	  border-radius: 15px;
    }
	
    li a {
      /* text-decoration: none;
      text-align: left;
      color: #000;
      margin: 8px;
      margin-bottom: 0px;
      width: 142px;
      height: 140px;
      background: #55be8c;
      display: block;
      float: left; */
    }

    *[draggable=true] {
      -moz-user-select:none;
      -khtml-user-drag: element;
      cursor: move;
    }

    *:-khtml-drag {
      background-color: rgba(238,238,238, 0.5);
    }

    li a:hover:after {
      content: ' (drag me)';
    }

    li.over {
      border-color: #333;
      background: #ccc;
    }
	
	li.normal{
		box-shadow: 0px 0px 20px #000;
	}
	
	li.huge{
		width: 300px;
	}
	
	li.hidden{
		display: none;
	}
    
    .tileContainer{
    }
	
	#r0 {
		width:1500px;
		overflow: hidden;
	}
	#r1 {
		width:1500px;
		overflow: hidden;
	}
	#r2 {
		width:1500px;
		overflow: hidden;
	}
	
	body{
		background-image:url(../images/background/bg.png);
		background-repeat:repeat;
	}

